new endpoint for asset
